# the_tuul

./: .gitattributes  .gitignore  Dockerfile  README.md  babel.config.json  cloudbuild.yaml  create_song_json.py  create_video.py  jsconfig.json  make_karaoke_video.py  package-lock.json  package.json  pyproject.toml  requirements.txt  subtitles.py  timing_data.py  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
api/: asgi.py  loggers.py  middlewares.py  settings.py  urls.py  views.py  wsgi.py
api/helpers/: youtube_helper.py
api/karaoke/: make_karaoke_video.py  music_separation.py  subtitles.py  timing_data.py
api/pretrained_models/: download_checks.json  mdx_model_data.json  model_data.json  model_mel_band_roformer_ep_3005_sdr_11.4360.ckpt  model_mel_band_roformer_ep_3005_sdr_11.4360.yaml  vr_model_data.json
api/static/: timings-ui.js
api/templates/: index.html
frontend/: App.vue  constants.js  constants.ts  index.js  index.ts  testSetup.ts  types.ts
frontend/components/: AdvancedOptionsModal.vue  FileUpload.spec.ts  FileUpload.vue  HelpTab.vue  LyricDisplay.vue  LyricEditor.vue  LyricInputTab.vue  SongFileTab.vue  SongInfoTab.vue  SongTimingTab.vue  SourceFileDownloadLinks.vue  SubmitTab.vue  TimingButtons.vue  VideoCreationProgressIndicator.vue  VideoPreview.vue
frontend/lib/: TimingsList.spec.ts  TimingsList.ts  adjustments.spec.ts  adjustments.ts  audio.ts  device.ts  lyrics.spec.ts  lyrics.ts  timing.js  timing.spec.js  timing.spec.ts  timing.ts  util.ts  video.spec.ts  video.ts
frontend/stores/: musicSeparation.ts
tests/: conftest.py
tests/api/helpers/: youtube_helper_test.py
tests/api/karaoke/: __init__.py  make_karaoke_video_test.py  subtitles_test.py
www/: index.html  style.css  timings-ui.js
