[tool.poetry]
name = "the_tuul"
version = "0.1.0"
description = "Create a good-enough karaoke track for any song in about 10 minutes"
authors = ["Dan Kurtz  <andfurthermore@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
spleeter = "^2.3.0"
pydub = "^0.25.1"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
click = "7.1.2"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^5.3.0"}
django-webpack-loader = "^1.4.0"

[tool.poetry.dev-dependencies]
# More recent versions of black conflict with spleeter somehow
black = "21.7b0"
pytest = "^7.1.2"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/api",
]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
