[tool.poetry]
name = "the_tuul"
version = "0.8.0"
description = "Create a good-enough karaoke track for any song in about 10 minutes"
authors = ["Dan Kurtz  <andfurthermore@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Django = "^5.0"
djangorestframework = "^3.14.0"
click = "^8.1.7"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-webpack-loader = "^2.0.1"
audio-separator = "^0.8.0"
django-cors-headers = "^4.3.1"
django-structlog = "^6.0.0"
pytube = "^15.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/api",
]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
